--- a/.github/workflows/build-n8n.yml
+++ b/.github/workflows/build-n8n.yml
@@ -13,12 +13,22 @@ on:
     paths-ignore:
       - '.n8n-version'
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   check-and-build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
+      attestations: write
+      id-token: write
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT_GITHUB }}
 
@@ -46,28 +56,59 @@ jobs:
             echo "UPDATE_NEEDED=false" >> $GITHUB_ENV
           fi
 
+      # Set up QEMU for multi-architecture builds
+      - name: Set up QEMU
+        if: env.UPDATE_NEEDED == 'true'
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         if: env.UPDATE_NEEDED == 'true'
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      # Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         if: env.UPDATE_NEEDED == 'true'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Extract metadata for Docker
+      - name: Extract Docker metadata
+        if: env.UPDATE_NEEDED == 'true'
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest
+            type=raw,value=${{ env.LATEST_VERSION }}
+
+      # Build and push multi-architecture image
       - name: Build and push
         if: env.UPDATE_NEEDED == 'true'
-        uses: docker/build-push-action@v4
+        id: push
+        uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/n8n-with-ffmpeg-and-curl:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/n8n-with-ffmpeg-and-curl:${{ env.LATEST_VERSION }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             N8N_VERSION=${{ env.LATEST_VERSION }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # Generate artifact attestation for supply chain security
+      - name: Generate artifact attestation
+        if: env.UPDATE_NEEDED == 'true'
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
 
       - name: Update version file
         if: env.UPDATE_NEEDED == 'true'
