--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,52 @@
-# PostgreSQL Configuration
-POSTGRES_DB=your_database_name
-POSTGRES_USER=your_postgres_user
-POSTGRES_PASSWORD=your_postgres_password
-POSTGRES_NON_ROOT_USER=your_app_user
-POSTGRES_NON_ROOT_PASSWORD=your_app_password
-
+# ===========================================
 # n8n Configuration
-ENCRYPTION_KEY=your_encryption_key_here
+# ===========================================
+N8N_HOST=n8n.yourdomain.com
+N8N_ENCRYPTION_KEY=your_encryption_key_here  # Generate with: openssl rand -hex 32
 N8N_RELEASE_DATE=2025-03-13T05:02:12Z
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
 
-# Host Configuration
-HOST=n8n.yourdomain.com
+# n8n Performance Settings
+N8N_PAYLOAD_SIZE_MAX=512
+N8N_FILESYSTEM_MAX_SIZE=512
+NODE_MAX_MEMORY=4096
+
+# n8n Runners (for Code nodes)
+N8N_RUNNERS_ENABLED=true
+N8N_RUNNERS_AUTO_SHUTDOWN_TIMEOUT=10800
+N8N_RUNNERS_MAX_CONCURRENCY=20
+
+# Data Path (mounted to /data inside container)
+N8N_DATA_PATH=/mnt
+
+# Container Settings
+N8N_CONTAINER_NAME=n8n
+N8N_PORT=5678
+
+# ===========================================
+# PostgreSQL Configuration
+# ===========================================
+POSTGRES_VERSION=16
+POSTGRES_DB=n8n_db
+POSTGRES_USER=postgres_admin
+POSTGRES_PASSWORD=change_this_password
+POSTGRES_NON_ROOT_USER=n8n_user
+POSTGRES_NON_ROOT_PASSWORD=change_this_password_too
+
+# ===========================================
+# Redis Configuration
+# ===========================================
+REDIS_VERSION=6-alpine
+
+# ===========================================
+# Traefik Configuration (Optional)
+# ===========================================
+# Set TRAEFIK_ENABLE=false if not using Traefik
+TRAEFIK_ENABLE=true
+TRAEFIK_NETWORK=traefik
+TRAEFIK_ENTRYPOINT_HTTP=web
+TRAEFIK_ENTRYPOINT_HTTPS=websecure
+TRAEFIK_CERTRESOLVER=letsencrypt
+
+# Traefik Router Name (useful if running multiple n8n instances)
+N8N_TRAEFIK_ROUTER=n8n
