Update .env.example and docker-compose.yml to correct Traefik configuration settings, setting TRAEFIK_ENABLE to false by default and updating comments for clarity.

--- a/.env.example
+++ b/.env.example
@@ -41,8 +41,8 @@ REDIS_VERSION=6-alpine
 # ===========================================
 # Traefik Configuration (Optional)
 # ===========================================
-# Set TRAEFIK_ENABLE=false if not using Traefik
-TRAEFIK_ENABLE=true
+# Set to true if using Traefik as reverse proxy
+TRAEFIK_ENABLE=false
 TRAEFIK_NETWORK=traefik
 TRAEFIK_ENTRYPOINT_HTTP=web
 TRAEFIK_ENTRYPOINT_HTTPS=websecure
