Add NODES_EXCLUDE environment variable to n8n configuration in docker-compose.yml for enhanced node management.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ x-shared: &shared
     - N8N_RUNNERS_MAX_CONCURRENCY=${N8N_RUNNERS_MAX_CONCURRENCY:-20}
     - N8N_EXECUTIONS_TIMEOUT=${N8N_EXECUTIONS_TIMEOUT:-3600}
     - N8N_EXECUTIONS_TIMEOUT_MAX=${N8N_EXECUTIONS_TIMEOUT_MAX:-7200}
+    - NODES_EXCLUDE=${NODES_EXCLUDE:-[]}
   volumes:
     - n8n_storage:/home/node/.n8n
     - ${N8N_DATA_PATH:-/mnt}:/data
