--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ x-shared: &shared
     - N8N_EXECUTIONS_TIMEOUT=${N8N_EXECUTIONS_TIMEOUT:-3600}
     - N8N_EXECUTIONS_TIMEOUT_MAX=${N8N_EXECUTIONS_TIMEOUT_MAX:-7200}
     - NODES_EXCLUDE=${NODES_EXCLUDE:-[]}
+    - NODE_FUNCTION_ALLOW_BUILTIN=${NODE_FUNCTION_ALLOW_BUILTIN:-*}
+    - NODE_FUNCTION_ALLOW_EXTERNAL=${NODE_FUNCTION_ALLOW_EXTERNAL:-*}
   volumes:
     - n8n_storage:/home/node/.n8n
     - ${N8N_DATA_PATH:-/mnt}:/data
