--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ x-shared: &shared
     - NODES_EXCLUDE=${NODES_EXCLUDE:-[]}
     - NODE_FUNCTION_ALLOW_BUILTIN=${NODE_FUNCTION_ALLOW_BUILTIN:-*}
     - NODE_FUNCTION_ALLOW_EXTERNAL=${NODE_FUNCTION_ALLOW_EXTERNAL:-*}
-    - N8N_RESTRICT_FILE_ACCESS_TO=${N8N_RESTRICT_FILE_ACCESS_TO:-/home/node/.n8n,/data}
+    - N8N_RESTRICT_FILE_ACCESS_TO=${N8N_RESTRICT_FILE_ACCESS_TO:-/home/node/.n8n;/data}
     - N8N_BLOCK_FILE_ACCESS_TO_N8N_FILES=${N8N_BLOCK_FILE_ACCESS_TO_N8N_FILES:-false}
   volumes:
     - n8n_storage:/home/node/.n8n
