--- a/.github/workflows/build-n8n.yml
+++ b/.github/workflows/build-n8n.yml
@@ -61,14 +61,16 @@ jobs:
             echo "0.0.0" > .n8n-version
           fi
           
-          CURRENT_VERSION=$(cat .n8n-version)
+          CURRENT_VERSION=$(cat .n8n-version | tr -d '\n\r ' | xargs)
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
           echo "Current tracked version: $CURRENT_VERSION"
           
           if [ "$LATEST_VERSION" != "$CURRENT_VERSION" ]; then
             echo "UPDATE_NEEDED=true" >> $GITHUB_ENV
+            echo "Update needed: $CURRENT_VERSION -> $LATEST_VERSION"
           else
             echo "UPDATE_NEEDED=false" >> $GITHUB_ENV
+            echo "No update needed: versions match ($CURRENT_VERSION)"
           fi
 
       # Set up QEMU for multi-architecture builds
