--- a/.github/workflows/build-n8n.yml
+++ b/.github/workflows/build-n8n.yml
@@ -147,11 +147,18 @@ jobs:
           echo "Triggering Dokploy deployment webhook..."
           curl -X POST "${{ secrets.DOKPLOY_WEBHOOK_URL }}" \
             -H "Content-Type: application/json" \
+            -H "X-GitHub-Event: push" \
             -d '{
+              "ref": "refs/heads/${{ github.ref_name }}",
+              "repository": {
+                "default_branch": "${{ github.ref_name }}"
+              },
+              "head_commit": {
+                "id": "${{ github.sha }}"
+              },
               "version": "${{ env.LATEST_VERSION }}",
               "image": "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.LATEST_VERSION }}",
               "digest": "${{ steps.push.outputs.digest }}",
-              "workflow_run": "${{ github.run_id }}",
-              "commit": "${{ github.sha }}"
+              "workflow_run": "${{ github.run_id }}"
             }' \
             -f -s -S || echo "Warning: Dokploy webhook call failed (secret may not be set)"
